# chat-for-rust-practice

./: Cargo.toml  README.md
src/: main.rs  message.rs
