[package]
name = "chat-for-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.46.1", features = ["tcp-tokio", "mdns"] }
tokio = { version = "1.20.1", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
] }
once_cell = "1.13.0"
serde_json = "1.0.82"
serde = "1.0.140"
chrono = "0.4.19"